Improve controls UI with Lucide icons and responsive grid
- Replace custom SVG icons and emojis with Lucide React icons
- Add collapsible dropdown for tracks when more than 2 tracks
- Make grid columns responsive (up to 10 columns on large screens)
- Center options inside grid cards
- Highlight muted audio icon with accent color
- Prevent view button text from wrapping
- Hide export button temporarily

--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "lucide-react": "^0.562.0",
     "midi-file": "^1.2.4",
     "pixi.js": "^8.14.3",
     "react": "^19.0.0",
