--- a/client/package.json
+++ b/client/package.json
@@ -31,6 +31,7 @@
     "globals": "^16.0.0",
     "typescript": "^5.7.3",
     "typescript-eslint": "^8.20.0",
-    "vite": "^6.0.0"
+    "vite": "^6.0.0",
+    "vite-plugin-pwa": "^1.2.0"
   }
 }
