Add volume mount for samples in Docker container

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,4 +8,6 @@ services:
     environment:
       - FORCE_HTTP=true
       - PORT=3000
+    volumes:
+      - ./client/public/samples:/app/dist/client/samples:ro
     restart: unless-stopped
